correction for mac os x

--- a/build.xml
+++ b/build.xml
@@ -83,6 +83,24 @@
 		<delete file="${basedir}/${lct_name}_setup.dmg" />
 		<copy file="${basedir}/install.sh" tofile="${basedir}/tmp/install_${lct_name}.command" />
 		<copy file="${basedir}/uninstall.sh" tofile="${basedir}/tmp/uninstall_${lct_name}.command" />
+		<echo file="${basedir}/tmp/install_brew.command">#!/bin/sh
+/usr/bin/ruby -e "$(curl -fsSL https://raw.githubusercontent.com/Homebrew/install/master/install)"
+read a
+		</echo>
+		<echo file="${basedir}/tmp/README">#### Install of ${lct_name} dor Mac OS X ####
+To install ${lct_name}, you must to have Mac OS X 10.9 minimum (last version is better)
+Available on this image:
+ - install_brew.command: allow to install "brew" tool, need to install ${lct_name}
+ - install_${lct_name}.command: allow to install ${lct_name} and dependancy
+ - uninstall_${lct_name}.command: allow to uninstall ${lct_name}
+
+#### Installation de ${lct_name} pour Mac OS X ####
+Pour installer ${lct_name}, vous devez disposer de Mac OS X 10.9 minimum (prévilègier la dernière version disponible)
+Disponible sur cette image:
+ - install_brew.command: permet d'installer l'outil "brew" nécessaire à l'installation de ${lct_name}
+ - install_${lct_name}.command: permet d'installer ${lct_name} ainsi que ces dépendance
+ - uninstall_${lct_name}.command: permet de désinstaller ${lct_name}
+		</echo>
 		<copy file="${basedir}/License.txt" todir="${basedir}/tmp" />
 		<antcall target="correct_install">
 			<param name="file_path" value="${basedir}/tmp/install_${lct_name}.command" />
@@ -90,6 +108,7 @@
 		<antcall target="correct_install">
 			<param name="file_path" value="${basedir}/tmp/uninstall_${lct_name}.command" />
 		</antcall>
+		<chmod file="${basedir}/tmp/install_brew.command" perm="ugo+rx"/>
 		<chmod file="${basedir}/tmp/install_${lct_name}.command" perm="ugo+rx"/>
 		<chmod file="${basedir}/tmp/uninstall_${lct_name}.command" perm="ugo+rx"/>
 	</target>
